WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176140
REGRESSION(
r221226
): [SOUP] libsoup-CRITICAL **: soup_cookies_to_cookie_header: assertion 'cookies != NULL' failed
https://bugs.webkit.org/show_bug.cgi?id=176140
Summary
REGRESSION(r221226): [SOUP] libsoup-CRITICAL **: soup_cookies_to_cookie_heade...
Michael Catanzaro
Reported
2017-08-30 18:10:05 PDT
Charlie noticed this error in the buildbot logs: libsoup-CRITICAL **: soup_cookies_to_cookie_header: assertion 'cookies != NULL' failed I bet it's a regression from
r221226
.
Attachments
Patch
(1.70 KB, patch)
2017-08-30 18:11 PDT
,
Michael Catanzaro
cgarcia
: review+
cgarcia
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-08-30 18:11:55 PDT
Created
attachment 319429
[details]
Patch
Michael Catanzaro
Comment 2
2017-08-30 18:13:05 PDT
This is a speculative fix, but I'm fairly confident....
Carlos Garcia Campos
Comment 3
2017-08-30 23:15:42 PDT
Comment on
attachment 319429
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319429&action=review
> Source/WebCore/platform/network/soup/CookieJarSoup.cpp:92 > - bool didAccessSecureCookies = false; > + if (!cookies) > + return { { }, false }; > > + bool didAccessSecureCookies = false;
I think it would be better to do this check after the loop. If all cookies are secure and includeSecureCookies == IncludeSecureCookies::No, the list can be empty (nullptr) after the loop.
Charlie Turner
Comment 4
2017-08-31 05:22:58 PDT
Michael, your speculative fix has worked for me, thanks!
Michael Catanzaro
Comment 5
2017-08-31 11:27:45 PDT
(In reply to Carlos Garcia Campos from
comment #3
)
> I think it would be better to do this check after the loop. If all cookies > are secure and includeSecureCookies == IncludeSecureCookies::No, the list > can be empty (nullptr) after the loop.
Good catch.
Michael Catanzaro
Comment 6
2017-08-31 13:09:58 PDT
Committed
r221438
: <
http://trac.webkit.org/changeset/221438
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug