REGRESSION(r221226): [SOUP] libsoup-CRITICAL **: soup_cookies_to_cookie_header: assertion 'cookies != NULL' failed https://bugs.webkit.org/show_bug.cgi?id=176140

Reviewed by Carlos Garcia Campos.

This should fix unexpected stderr output in several tests.

* platform/network/soup/CookieJarSoup.cpp:
(WebCore::cookiesForSession):

Canonical link: https://commits.webkit.org/192840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221438 268f45cc-cd09-0410-ab3c-d52691b4dbfc